--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ html, body {
 }
 
 .swipper {
+    margin-top: 75px;
     border: 3px solid black;
     padding: 5px;
     display: inline-block;
@@ -18,13 +19,16 @@ html, body {
     margin: 0;
     padding: 0;
     height: 50px;
-    margin: 3px;
+    height: calc((100% - 2px * 20) / 20);
+    display: flex;
 }
 
 .swipper img{
     width: 50px;
     height: 50px;
     margin: 1px;
+    width: calc((100% - 2px * 20) / 20);
+    height: 100%;
 }
 
 .swipper img[src="img/default.png"] {
