--- a/style.css
+++ b/style.css
@@ -9,17 +9,20 @@ html, body {
 }
 
 .swipper {
-    margin-top: 75px;
+    margin-top: 50px;
+    margin-bottom: 50px;
     border: 3px solid black;
     padding: 5px;
     display: inline-block;
+    width: 700px;
 }
 
 .swipper div {
+    
     margin: 0;
     padding: 0;
-    height: 50px;
-    height: calc((100% - 2px * 20) / 20);
+    /* height: 50px; */
+    /* height: calc((100% - 2px * 20) / 20); */
     display: flex;
 }
 
@@ -27,11 +30,31 @@ html, body {
     width: 50px;
     height: 50px;
     margin: 1px;
-    width: calc((100% - 2px * 20) / 20);
+    /* width: calc((100% - 2px * 20) / 20); */
     height: 100%;
 }
 
 .swipper img[src="img/default.png"] {
     border: 1px solid black;
     box-sizing: border-box;
+}
+
+/* #isCheckbox {
+    display: none;
+  }
+
+  #checkboxForGame:checked ~ #isCheckbox {
+    display: block;
+  }
+
+  #isCheckradio {
+    display: block;
+  }
+
+  #checkboxForGame:checked ~ #isCheckradio {
+    display: none;
+  } */
+
+  .is-hidden {
+    display: none;
 }
