--- a/style.css
+++ b/style.css
@@ -1,21 +1,24 @@
 html, body {
+    background: linear-gradient(#ffffff, hsl(124deg 100% 83%));
     width: 100%;
     height: 100%;
-    margin: 0;
-    -webkit-user-select: none;
+    margin: 0px;
+    position: absolute;
 }
 
 .container {
     text-align: center;
 }
 
+
 .swipper {
-    margin-top: 50px;
-    margin-bottom: 50px;
+    background: white;
+    margin-top: 20px;
+    margin-bottom: 20px;
     border: 3px solid black;
-    padding: 5px;
+    padding: 3px;
     display: inline-block;
-    width: 700px;
+    width: 600px;
 }
 
 .swipper div {
@@ -39,22 +42,6 @@ html, body {
     border: 1px solid black;
     box-sizing: border-box;
 }
-
-/* #isCheckbox {
-    display: none;
-  }
-
-  #checkboxForGame:checked ~ #isCheckbox {
-    display: block;
-  }
-
-  #isCheckradio {
-    display: block;
-  }
-
-  #checkboxForGame:checked ~ #isCheckradio {
-    display: none;
-  } */
 
   .is-hidden {
     display: none;
